--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,7 @@
 	<version>0.1-SNAPSHOT</version>
 
 	<properties>
-		<project.reporting.outputEncoding>UTF-8
-		</project.reporting.outputEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.languageLevel>1.8</project.build.languageLevel>
 
@@ -66,6 +65,13 @@
 			<version>${testng.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Maven Surefire -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.19</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -91,7 +97,7 @@
 				</executions>
 			</plugin>
 
-			<!-- Compiler -->
+			<!-- Maven compiler Compiler -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -100,6 +106,18 @@
 					<source>${project.build.languageLevel}</source>
 					<target>${project.build.languageLevel}</target>
 					<compilerArgument>-Xlint:all</compilerArgument>
+				</configuration>
+			</plugin>
+
+			<!-- Maven Surefire -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
+				<configuration>
+					<parallel>methods</parallel>
+					<threadCount>10</threadCount>
+					<argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
