--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,22 @@
 					<argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8</argLine>
 				</configuration>
 			</plugin>
+
+			<!-- Maven Assembly -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>dk.skrypalle.bpl.Main</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
